Fix spectated player not showing

--- a/code/Components/UI/Menu.razor.scss
+++ b/code/Components/UI/Menu.razor.scss
@@ -34,8 +34,6 @@ Menu
 
         .button
         {
-            flex-grow: 1;
-
             font-family: Poppins;
             font-size: 42px;
 
@@ -46,8 +44,7 @@ Menu
             background-color: hsl(0, 0%, 8%);
             border-color: hsl(0, 0%, 11%);
             color: white;
-            min-height: 100px;
-            max-height: 100px;
+            height: 100px;
             cursor: pointer;
 
             &:hover
